--- a/Dockerfile-multistage
+++ b/Dockerfile-multistage
@@ -1,7 +1,8 @@
 FROM node:16.13.1 AS build
 WORKDIR /usr/app
-COPY . /usr/app
+COPY package.json /usr/app
 RUN npm install
+COPY . /usr/app
 RUN npm run build
 
 FROM nginx
