--- a/Dockerfile-multistage
+++ b/Dockerfile-multistage
@@ -3,6 +3,7 @@ WORKDIR /usr/app
 COPY package.json /usr/app
 RUN npm install
 COPY . /usr/app
+RUN chmod a+x node_modules/.bin/react-scripts
 RUN npm run build
 
 FROM nginx
